objects/Pagamento_da_Verba__c.object
<CustomObject>
    <description>Onda 02 Projeto - Objeto para realizar Pagamentos de Verbas (Contratos, Eventos, Ações Promocionais, Treinamentos)</description>
    <fields>
        <fullName>Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pagamentos das Verbas</relationshipLabel>
        <relationshipName>Pagamentos_das_Verbas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investimento_Bonifica_o_e_Pagamento__c</fullName>
        <label>Investimento, Bonificação e Pagamento</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Investimento_Bonificacao_e_Pagamento__c.LAT_Contract__r.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Conta__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Investimento_Bonificacao_e_Pagamento__c</referenceTo>
        <relationshipLabel>Pagamentos das Verbas</relationshipLabel>
        <relationshipName>Pagamentos_das_Verbas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pagar com Produto</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>Pagamentos das Verbas</relationshipLabel>
        <relationshipName>LAT_Pagamentos_das_Verbas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MensagemIntegracao__c</fullName>
        <label>Mensagem Integração</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nome_Fantasia__c</fullName>
        <formula>Pagamento__r.Cliente__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome Fantasia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_retorno_Pagamento__c</fullName>
        <description>Número de retorno do pagamento.</description>
        <label>Número retorno Pagamento</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pagamento__c</fullName>
        <label>Pagamento</label>
        <referenceTo>Pagamento__c</referenceTo>
        <relationshipLabel>Pagamentos das Verbas</relationshipLabel>
        <relationshipName>Pagamentos_das_Verbas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Produto_da_SV__c</fullName>
        <formula>Investimento_Bonifica_o_e_Pagamento__r.Custo_Bonificado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custo Bonificado (SV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sado_da_SV_R__c</fullName>
        <formula>Investimento_Bonifica_o_e_Pagamento__r.Saldo_R__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sado da SV (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Saldo_da_SV_Volume_cx__c</fullName>
        <formula>Investimento_Bonifica_o_e_Pagamento__r.Saldo_Caixas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo da SV (CA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sistema__c</fullName>
        <label>Sistema</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>SCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pago</fullName>
                </value>
                <value>
                    <fullName>Aprovado Integrado</fullName>
                </value>
                <value>
                    <fullName>Cancelado</fullName>
                </value>
                <value>
                    <fullName>Devolvido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Registro_Pai_del__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Registro Pai</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>identificar_tipo_de_registroitem__c</fullName>
        <formula>Pagamento__r.identificar_tipo_de_registro_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>identificar tipo de registro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pagar_com_produto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pagar com Produto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pagamentos das Verbas</relationshipLabel>
        <relationshipName>Pagamentos_das_Verbas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>trigger_on__c</fullName>
        <defaultValue>false</defaultValue>
        <label>trigger on</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>valor_a_pagar__c</fullName>
        <label>Valor à Pagar (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>volume_a_pagar__c</fullName>
        <label>Volume à Pagar (CA)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pagamento da Verba</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Verba</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos das Verbas</pluralLabel>
    <recordTypes>
        <fullName>Bonificacao_Produtos</fullName>
        <active>true</active>
        <description>Bonificação (Produtos)</description>
        <label>Bonificação (Produtos)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dinheiro</fullName>
        <active>true</active>
        <description>Dinheiro</description>
        <label>Dinheiro</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BloqueiaClienteDiferente</fullName>
        <active>true</active>
        <description>bloqueia o cliente do pagamento diferente do cliente do item de investimento, bonificação e pagamento</description>
        <errorConditionFormula>Investimento_Bonifica_o_e_Pagamento__r.LAT_Contract__r.Account__r.Id &lt;&gt;    Pagamento__r.Cliente__r.Id</errorConditionFormula>
        <errorDisplayField>Investimento_Bonifica_o_e_Pagamento__c</errorDisplayField>
        <errorMessage>Só é possível associar itens do pagamento para o mesmo cliente do pagamento</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaPagamentoIBPEncerrada</fullName>
        <active>true</active>
        <description>não é possível criar um pagamento de uma IBP que esteja ENCERRADA.</description>
        <errorConditionFormula>OR( 

AND(trigger_on__c ,
         NOT(ISPICKVAL(Investimento_Bonifica_o_e_Pagamento__r.Status_da_Verba__c , &quot;Em preenchimento&quot;) )
         )
,

AND(
NOT( trigger_on__c ),   
OR( 
AND ( 
NOT( 
          ISPICKVAL( Status__c , &quot;Cancelado&quot;)),NOT(ISPICKVAL(Investimento_Bonifica_o_e_Pagamento__r.Status_da_Verba__c , &quot;Reservado&quot;))
), 
AND( ISNEW() , NOT(ISPICKVAL(Investimento_Bonifica_o_e_Pagamento__r.Status_da_Verba__c , &quot;Reservado&quot;))))
))</errorConditionFormula>
        <errorDisplayField>Investimento_Bonifica_o_e_Pagamento__c</errorDisplayField>
        <errorMessage>Não é possível pagar um &quot;Investimento, Bonificação e Pagamento&quot; com status diferente de &quot;Reservado&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaPagamentoMaiorSaldoIBP</fullName>
        <active>true</active>
        <description>Valor do pagamento não pode ser maior que saldo (R$ em dinheiro) da IBP.</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;Dinheiro&apos; ,

OR(    

Sado_da_SV_R__c = 0,ISNEW() ),

AND( valor_a_pagar__c &gt;  Sado_da_SV_R__c, 
           ISNEW() ), 
AND( ISCHANGED(valor_a_pagar__c ),  
           valor_a_pagar__c &gt; (PRIORVALUE(valor_a_pagar__c)+ Sado_da_SV_R__c),         
           NOT(ISPICKVAL( Status__c , &quot;Cancelado&quot;)))
)</errorConditionFormula>
        <errorDisplayField>valor_a_pagar__c</errorDisplayField>
        <errorMessage>Solicitação de pagamento não pode ser Criada. SV não tem Saldo suficiente para pagamento</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BloqueiaTipoIBP</fullName>
        <active>true</active>
        <errorConditionFormula>(  Investimento_Bonifica_o_e_Pagamento__r.Volume_Cx__c   &gt; 0)  &amp;&amp;  (identificar_tipo_de_registroitem__c = &quot;D&quot;)   || 

( Investimento_Bonifica_o_e_Pagamento__r.Valor_R__c  &gt; 0 )  &amp;&amp;  
(identificar_tipo_de_registroitem__c &lt;&gt; &quot;D&quot;)</errorConditionFormula>
        <errorDisplayField>Investimento_Bonifica_o_e_Pagamento__c</errorDisplayField>
        <errorMessage>Está verba não pode ser paga neste tipo de pagamento</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valor_do_pagamento_maior_que_saldo_caixa</fullName>
        <active>true</active>
        <description>Valor_do_pagamento_maior_que_saldo_em caixas</description>
        <errorConditionFormula>AND($RecordType.DeveloperName = &apos;Dinheiro&apos; ,

ISCHANGED(volume_a_pagar__c ), 
 valor_a_pagar__c &gt; (PRIORVALUE(volume_a_pagar__c )+  Saldo_da_SV_Volume_cx__c ), 
NOT(ISPICKVAL( Status__c , &quot;Cancelado&quot;))

)</errorConditionFormula>
        <errorDisplayField>volume_a_pagar__c</errorDisplayField>
        <errorMessage>Solicitação de pagamento não pode ser criada. SV Complementar deverá ser feita. (Ultrapassa o Salda da SV).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>data_de_pagamento_menor_que_a_data_previ</fullName>
        <active>true</active>
        <description>A data do pagamento não deve ser maior que a data prevista para pagamento.</description>
        <errorConditionFormula>Investimento_Bonifica_o_e_Pagamento__r.Data_de_Previsao_do_Pagamento__c  &gt;  Pagamento__r.Data_do_Pagamento__c</errorConditionFormula>
        <errorMessage>A data prevista para pagamento do item na SV não pode ser maior que a data do pagamento do Cabeçalho</errorMessage>
    </validationRules>
</CustomObject>